# profo

./: .gitignore  AGENTS.md  API_PUSH.md  CLAUDE.md  CODE_REVIEW_REPORT.md  CODE_REVIEW_REPORT_FINAL.md  CODE_REVIEW_REPORT_UPDATED.md  E2E_TESTING_IMPLEMENTATION_SUMMARY.md  FRONTEND_IMPLEMENTATION_SUMMARY.md  FRONTEND_NEXTJS_GUIDE.md  OPTIMIZATION_REPORT.md  PERFORMANCE_OPTIMIZATION.md  Profo.md  README.md  agent.md  backend-resp.md  backendresp.md  backendreview.md  dev_plan.md  l3-ref-info.md  l3-step1.md  l4-task.md  l4task.md  miniproject_plan.md  openapi.json  projesctbackend.md  reproduce_photo_error.py  start.bat  start.sh  test.html  test.md  test_output.txt  user_permission_management.md
backend/: .env.example  .gitignore  API_Analysis.md  API_DOCUMENTATION.md  API_task.md  CODE_QUALITY_REPORT.md  ERROR_HANDLING_README.md  PROJECT_SUMMARY.md  README.md  REFACTORING_PLAN.md  __init__.py  alembic.ini  check_paths.py  check_roles.py  common.py  comprehensive_test.py  conftest.py  cov-output.txt  create_admin.py  db.py  debug_types.py  error_handlers.py  exceptions.py  failed_download.csv  final_test.py  fix_admin.py  generate_openapi.py  init_admin.py  init_admin_simple.py  init_db.py  main.py  migrations.py  models.py  n1fix.md  openapi.json  openapi_check.json  pyproject.toml  reproduce_error.py  reproduce_error_v2.py  reset_db.py  (+19 more)
backend/alembic/: README  env.py
backend/dependencies/: auth.py  common.py  projects.py
backend/migrations/: __init__.py  fix_image_urls.py  runtime.py
backend/models/: __init__.py  _project_base.py  _project_contract.py  _project_finance.py  _project_followup.py  _project_interaction.py  _project_owner.py  _project_renovation.py  _project_sale.py  _project_status_log.py  base.py  community.py  error.py  l4_marketing.py  lead.py  media.py  mini.py  project.py  property.py  user.py
deploy/: README.md  (+14 more)
(+1995 files in other folders)
